обучение на простых картинках

--- a/cpu/neuro/changelog.txt
+++ b/cpu/neuro/changelog.txt
@@ -1,1 +1,3 @@
 0.1 Вычислительная часть, сохранение / загрузка на диск, возможность нарисовать изображение нейросети.
+
+16 мая 2016. Сеть может быть обучена и различать простые картинки. (здесь будет ссылка на обучающую базу)
