добавил обработку видео

--- a/cpu/neuro/changelog.txt
+++ b/cpu/neuro/changelog.txt
@@ -1,3 +1,6 @@
 0.1 Вычислительная часть, сохранение / загрузка на диск, возможность нарисовать изображение нейросети.
 
-16 мая 2016. Сеть может быть обучена и различать простые картинки. (здесь будет ссылка на обучающую базу)
+16 мая 2016. Сеть может быть обучена и различать простые картинки.
+	Пример обучающей базы - nothing_gen и obj_gen (должны работать вместе)
+
+20 мая 2016. Сеть может отмечать распознанные изображения на видео.
